// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapsible matches snapshot when is not open 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 [data-element='title'] {
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-1 [data-element='title']>div>div>div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1:hover {
  cursor: pointer;
}

.emotion-1:hover [data-element='title'] {
  -webkit-transform: translateX(5px);
  -moz-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.emotion-2 {
  display: inline-block;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  display: inline-block;
  color: rgba(135, 155, 166, 0.7);
  text-transform: uppercase;
  font-weight: 500;
  font-size: 0.88em;
  overflow: hidden;
  text-overflow: ellipsis;
}

@media only screen and (max-width: 768px) {
  .emotion-5 {
    font-size: 0.8em;
  }
}

.emotion-6 {
  margin-bottom: -2px;
  color: #879ba6;
}

.emotion-7 {
  color: inherit;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      data-element="title"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
            style={{}}
          >
            <div
              className="emotion-5"
            >
              Title
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-6"
    >
      <i
        className="emotion-7 Drycon Drycon-chevron-down"
      />
    </div>
  </div>
</div>
`;

exports[`Collapsible matches snapshot when it is open 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 [data-element='title'] {
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-1 [data-element='title']>div>div>div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1:hover {
  cursor: pointer;
}

.emotion-1:hover [data-element='title'] {
  -webkit-transform: translateX(5px);
  -moz-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.emotion-2 {
  display: inline-block;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  display: inline-block;
  color: rgba(135, 155, 166, 0.7);
  text-transform: uppercase;
  font-weight: 500;
  font-size: 0.88em;
  overflow: hidden;
  text-overflow: ellipsis;
}

@media only screen and (max-width: 768px) {
  .emotion-5 {
    font-size: 0.8em;
  }
}

.emotion-6 {
  margin-bottom: -2px;
  color: #879ba6;
}

.emotion-7 {
  color: inherit;
}

.emotion-8 {
  padding-top: 8px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      data-element="title"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
            style={{}}
          >
            <div
              className="emotion-5"
            >
              Title
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-6"
    >
      <i
        className="emotion-7 Drycon Drycon-chevron-up"
      />
    </div>
  </div>
  <div
    className="emotion-8"
  >
    Collapsible content
  </div>
</div>
`;

exports[`Collapsible matches snapshot when the title is a node 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 [data-element='title'] {
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-1 [data-element='title']>div>div>div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1:hover {
  cursor: pointer;
}

.emotion-1:hover [data-element='title'] {
  -webkit-transform: translateX(5px);
  -moz-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.emotion-2 {
  display: inline-block;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  color: #172b4e;
}

.emotion-6 {
  display: inline;
  color: #172b4e;
  font-size: 1em;
}

.emotion-7 {
  margin-bottom: -2px;
  color: #879ba6;
}

.emotion-8 {
  color: inherit;
}

.emotion-9 {
  padding-top: 8px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      data-element="title"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
            style={{}}
          >
            <div
              className="emotion-5"
            >
              <span
                className="emotion-6"
              >
                The title
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-7"
    >
      <i
        className="emotion-8 Drycon Drycon-chevron-up"
      />
    </div>
  </div>
  <div
    className="emotion-9"
  >
    Collapsible content
  </div>
</div>
`;
